@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.6.3 on Wed Sep  3 14:31:30 2008 -->
+<!-- generated by wxGlade 0.6.3 on Sun Sep  7 11:47:41 2008 -->
 
 <application path="/home/matts/svn/genx/trunk/genx/genx_gui.py" name="app" class="MyApp" option="0" language="python" top_window="main_frame" encoding="UTF-8" use_gettext="0" overwrite="0" use_new_namespace="1" for_version="2.6" is_template="0">
     <object class="MainFrame" name="main_frame" base="EditFrame">
@@ -308,16 +308,16 @@
                 </menu>
                 <menu name="" label="Misc">
                     <item>
+                        <label>Models Help...</label>
+                        <name>mb_models_help</name>
+                        <help_str>Show help for the models</help_str>
+                        <handler>eh_mb_models_help</handler>
+                    </item>
+                    <item>
                         <label>Show Manual...</label>
                         <name>mb_misc_showman</name>
                         <help_str>Show the manual</help_str>
                         <handler>eh_mb_misc_showman</handler>
-                    </item>
-                    <item>
-                        <label>Pretty Plot</label>
-                        <name>mb_misc_prettyplot</name>
-                        <help_str>Produce an almost publication quality plot</help_str>
-                        <handler>eh_mb_misc_prettyplot</handler>
                     </item>
                     <item>
                         <label>About...</label>
